# Rustic-Engine-Rewritten

./: .gitignore  Cargo.toml
assets/source/data/: freeplaySonglist.txt
assets/source/data/characters/: bf.json  dad.json  gf.json  tankman-bloody.json
assets/source/data/dadbattle/: dadbattle-easy.json
assets/source/data/fresh/: fresh-easy.json  fresh-hard.json  fresh.json
assets/source/data/stages/: sserafim.json  stage.json
assets/source/images/freeplay/: REQUIRED.md
crates/rustanimate/: Cargo.toml
crates/rustanimate/src/: animation.rs  animation_alt.rs  atlas.rs  error.rs  lib.rs
crates/rustanimate/tests/: animation.rs
crates/rustic-app/: Cargo.toml
crates/rustic-app/src/: active_holds.rs  animate_character_assets.rs  animate_character_assets_tests.rs  animation_timing.rs  app.rs  app_runtime.rs  app_tests.rs  app_text.rs  app_types.rs  asset_roots.rs  audio_clock.rs  audio_fallback.rs  bitmap_text_assets.rs  boot.rs  camera_events.rs  camera_fx.rs  character_anim.rs  character_anim_tests.rs  countdown_assets.rs  countdown_audio.rs  credits_assets.rs  darnell_intro_cutscene.rs  dialogue_state.rs  freeplay_assets.rs  freeplay_assets_helpers.rs  freeplay_backing_text.rs  freeplay_capsule_metadata.rs  freeplay_difficulty_cycle.rs  freeplay_difficulty_stars.rs  freeplay_dj.rs  freeplay_icons.rs  freeplay_loader.rs  freeplay_loader_tests.rs  freeplay_preview_audio.rs  freeplay_song_metadata.rs  game_over.rs  game_over_audio.rs  gameplay_note_sfx.rs  hold_cover_assets.rs  hud_assets.rs  (+49 more)
crates/rustic-app/src/app/: credits_flow.rs  debug_overlay.rs  dialogue_flow.rs  game_over_flow.rs  gameplay_flow.rs  options_flow.rs  pause_flow.rs  redraw.rs  song_flow.rs  title_flow.rs
crates/rustic-asset/: Cargo.toml
crates/rustic-asset/src/: error.rs  lib.rs  loaders.rs  path.rs  resolver.rs  source.rs  watcher.rs
crates/rustic-asset/src/parsers/: character.rs  chart.rs  chart_events.rs  chart_tests.rs  font.rs  level.rs  mod.rs  png.rs  sparrow.rs  stage.rs  text_list.rs  types.rs
crates/rustic-audio/: Cargo.toml
crates/rustic-audio/src/: conductor.rs  device.rs  error.rs  lib.rs  mixer.rs  source.rs  vorbis.rs
crates/rustic-core/: Cargo.toml
crates/rustic-core/src/: error.rs  events.rs  ids.rs  input.rs  lib.rs  render.rs  time.rs
crates/rustic-dev/: Cargo.toml
crates/rustic-dev/src/: lib.rs  rewind.rs
crates/rustic-game/: Cargo.toml
crates/rustic-game/src/: error.rs  judgment.rs  lib.rs  note.rs  progress.rs  scoring.rs  state.rs  view.rs
crates/rustic-render/: Cargo.toml
crates/rustic-render/shaders/: composite.wgsl  sprite.wgsl
crates/rustic-render/src/: batch.rs  camera.rs  capture.rs  command.rs  composite.rs  error.rs  filter.rs  lib.rs  pipeline.rs  state.rs  text.rs  texture.rs
docs/: ci.md  event_bus_versions.md  fidelity_deviations.md  fnf_baseline.md  prototype_gaps.md
tools/: lint.sh
tools/lint/: asset_io.sh  backend_api.sh  file_size.sh  ref_comments.sh
xtask/: Cargo.toml
xtask/src/: main.rs  regression.rs
