[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustic-core = { workspace = true }
rustic-asset = { workspace = true }
rustic-render = { workspace = true }
rustic-app = { path = "../crates/rustic-app" }
rustic-game = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
