[package]
name = "rustanimate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Renderer-agnostic Rust port of flxanimate. Parses Adobe Animate texture atlases and yields flat 2D draw calls."

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
