[package]
name = "rustic-asset"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
rustic-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
tempfile = "3"
