[package]
name = "rustic-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rustic-core = { workspace = true }
rustic-asset = { workspace = true }
rustic-game = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
