[package]
name = "rustic-render"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
rustic-core = { workspace = true }
rustic-asset = { workspace = true }
rustanimate = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
